# rtic-on-riscv-vp

./: .gitmodules
rust/: Cargo.toml  memory.x
rust/hello-rtic/: Cargo.toml
rust/hello-rtic/src/: main.rs
rust/hello-world/: Cargo.toml
rust/hello-world/src/: main.rs
scripts/: start.resc
