[package]
name = "hello-rtic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
riscv-rt = { workspace = true }
riscv = { workspace = true }
common = { path = "../common" }
rtic = { path = "../../rtic/rtic", features = [
    "riscv-e310x-backend",
] }
riscv-slic = { git = "https://github.com/onsdagens/riscv-slic/", branch="dev-plic" , features = [
    "swi-clint",
    "exti-plic",
] }
e310x = { git = "https://github.com/greenlsi/e310x.git", branch = "master", features = [
    "rt",
] }
